# mymusic

./: pyproject.toml  runner.py
mymusic/: __init__.py  artistcatalog.py  base.py  catalog.py  knownmatched.py  params.py  primedir.py
mymusic/old/: findMyMusic.py  matchMusicName.py  matchMyMusic.py  musicFinder.py  musicPath.py  musicUtils.py  myMusicPathData.py  setup.py
note/: Analysis.ipynb  ArtistGroups.ipynb  MatchDB.ipynb  Matched.ipynb  MoveIt.ipynb  Music.ipynb  My Music.ipynb
tests/: extra_conftest.py  test_catalog.py  test_import.py  test_params.py  test_primedir.py
