[tool.poetry]
name = "mymusic"
version = "0.1.0"
description = ""
authors = ["tgadf <tgadfort@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poe.tasks]
known.script = "mymusic.knownmatched:knownmatched"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
