[project]
name = "mymusic"
version = "0.1.0"
description = ""
authors = [
    {name = "tgadf",email = "tgadfort@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-skip-slow (>=0.0.5,<0.0.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
